--- a/pages/index.html
+++ b/pages/index.html
@@ -10,11 +10,15 @@
     <title>Jumpy</title>
 </head>
 
+<!-- Cabeçalho com Logo da DNC -->
 <header>
     <div id="logo">
         <img src="assets/img/logo-dnc.svg" alt="Logo-Dnc">
     </div>
 </header>
+
+<!-- Corpo contém logo da Jumpy o formulário de registro e botão de confirmação -->
+<!-- divididos em uma única seção até o momento -->
 
 <body>
 
@@ -51,6 +55,8 @@
             </form>
         </div>
     </section>
+
+    <!-- integração com javascript -->
     <script src="assets/js/main.js"></script>
 </body>
 
